# codefart

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  index.html  install.ps1  install.sh  uninstall.sh
.github/workflows/: desktop-release.yml  release.yml
Formula/: codefart.rb
crates/codefart-cli/: Cargo.toml
crates/codefart-cli/src/: cli.rs  main.rs  runner.rs
crates/codefart-core/: Cargo.toml
crates/codefart-core/src/: audio.rs  config.rs  lib.rs  notification.rs  setup.rs  update.rs
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.css  App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: AutostartToggle.tsx  HookSection.tsx  NotificationPrefs.tsx  SoundUpload.tsx  ThemePicker.tsx  ToggleSwitch.tsx  UpdateChecker.tsx
docs/: DESIGN.md  codefart-prd.md  desktop-prd.md  desktop-tech-spec.md  release.md  tech-spec.md  todo.md  use-case.md  verification.md
page/: index.html
scripts/: gen_placeholder_sounds.py
src/: audio.rs  cli.rs  config.rs  error.rs  main.rs  runner.rs  setup.rs  update.rs
