[workspace]
members = [
    "crates/*",
    # "desktop/src-tauri",  # Tauri desktop app (v2)
]
resolver = "3"

[workspace.package]
version = "0.2.12"
edition = "2024"
description = "💨 Play a sound when your AI finishes thinking"
repository = "https://github.com/Onion-L/codefart"
license = "MIT"
authors = ["Onion-L"]

[profile.release]
strip = "debuginfo"
lto = true
