[workspace]
members = [
    "crates/*",
    "desktop/src-tauri",
]
resolver = "3"

[workspace.package]
version = "0.2.18"
edition = "2024"
description = "💨 Play a sound when your AI finishes thinking"
repository = "https://github.com/Onion-L/codefart"
license = "MIT"
authors = ["Onion-L"]

[profile.release]
strip = "debuginfo"
lto = true
