[package]
name = "codefart-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rodio = "0.18"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
thiserror = "2"
shellexpand = "3"
ureq = "3"
tempfile = "3"
