[package]
name = "codefart-desktop"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "custom-protocol"] }
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
codefart-core = { path = "../../crates/codefart-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
